--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flows-web-ui",
   "version": "0.1.0",
-  "homepage": "https://spuchala.github.io/flows",
+  "homepage": "https://spuchala.github.io/flows-web-ui",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dagre": "latest",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -46,8 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
