--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.8.2",
     "dagre": "latest",
+    "dagre-d3": "^0.6.4",
     "gh-pages": "^4.0.0",
     "mermaid": "^9.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "reactflow": "^11.3.1",
+    "reactflow": "^11.5.6",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
