--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "cytoscape": "^3.23.0",
-    "cytoscape-cose-bilkent": "^4.1.0",
-    "react-cytoscapejs": "^2.0.0",
+    "cytoscape": "3.16.1",
+    "cytoscape-cola": "2.4.0",
+    "cytoscape-cose-bilkent": "4.1.0",
+    "cytoscape-dagre": "2.3.0",
+    "react-cytoscapejs": "1.2.1",
     "d3": "^7.8.2",
     "dagre": "latest",
     "dagre-d3": "^0.6.4",
